--- a/PhotoBook/Views/Shared/_Layout.cshtml
+++ b/PhotoBook/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
         <p class="text-muted credit">@DateTime.Now.Year, &copy PhotoBook</p>
       </div>
     </div>
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/Scripts/bootstrap.min.js")
-    @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
 </html>
