--- a/PhotoBook/Content/styles.css
+++ b/PhotoBook/Content/styles.css
@@ -4,7 +4,8 @@
 html,
 body {
   height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
+    background: url("bg.png");
+    font-family: "segoeui";
 }
 
 /* Wrapper for page content to push down footer */
@@ -55,6 +56,159 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.auto { 
+margin-left: auto !important;
+margin-right: auto !important;
+}
+
+/* .: GALLERY:.*/
+
+.gallery{
+    box-shadow:0 0 1px 1px #ccc;
+    -moz-box-shadow:0 0 1px 1px #ccc;
+    -o-box-shadow:0 0 1px 1px #ccc;
+    -webkit-box-shadow:0 0 1px 1px #ccc;
+    margin-bottom:30px;
+    margin-left: 70px;
+    background:#fff;
+    padding-bottom: 10px;
+}
+
+.gallery:hover{
+}
+
+.menu-gallery{
+    border-bottom:1px solid #ccc;
+    height:40px;
+}
+
+.menu-gallery ul{
+    list-style-type: none;
+}
+
+.menu-gallery ul li{
+    float: left;
+    margin-right:15px;
+}
+
+.menu-gallery ul li a{
+    margin-right: 18px;
+    opacity:0.6;
+    filter:alpha(opacity=60); /* For IE8 and earlier */
+    transition:opacity 0.5s;
+    -moz-transition:opacity 0.5s;
+    -o-transition:opacity 0.5s;
+    -webkit-transition:opacity 0.5s;
+}
+
+.menu-gallery ul li a:hover{
+    opacity:1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
+}
+
+.image-gallery{
+    margin: 20px;
+    border-bottom:1px solid #ccc;
+}
+
+.image-gallery img{
+    width:100%;
+    height:100%;
+    display:block;
+}
+
+.count-gallery{
+    height:30px;
+    margin-bottom:5px;
+    border-bottom:1px solid #ccc;
+}
+
+.count-gallery ul{
+    list-style-type:none;
+}
+
+.count-gallery ul li{
+    float:left;
+    margin-left: -5px;
+    margin-right: 20px;
+}
+
+.tags-gallery{
+    padding-top: 10px;
+    border-top:1px solid #ccc;
+    margin: 5px;
+}
+
+.tags-gallery a{
+    text-decoration:none;
+}
+
+.tags-gallery a:hover{
+    color: #555;
+    text-decoration:underline;
+}
+
+/* .: DETAIL :. */
+
+.image-detail{
+    box-shadow:0 0 1px 1px #ccc;
+    -moz-box-shadow:0 0 1px 1px #ccc;
+    -webkit-box-shadow:0 0 1px 1px #ccc;
+    -o-box-shadow:0 0 1px 1px #ccc;
+    min-height:100px;
+    background: #fff;
+}
+
+.image-single{
+    margin: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+img.centered{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-single img{
+    text-align: center;
+    max-width:100%;
+    max-height:100%;
+}
+
+/* .: IMAGE DESCRIPTION :. */
+
+.image-description{
+    box-shadow:0 0 1px 1px #ccc;
+    -moz-box-shadow:0 0 1px 1px #ccc;
+    -webkit-box-shadow:0 0 1px 1px #ccc;
+    -o-box-shadow:0 0 1px 1px #ccc;
+    margin-top: 10px;
+    background:#fff;
+    min-height: 50px;
+}
+
+.image-description h3{
+    margin-top: 10px;
+    margin-bottom:15px;
+    margin-left: 20px;
+    font-weight:bold;
+}
+
+.image-description p{
+    margin-left:20px;
+    margin-right:20px;
+    margin-bottom:20px;
+    text-align:justify;
+    font-family: segoeui;
+    font-size:14px;
+    line-height: 15px;
+}
+
+/* .: OTHER :.*/
+
 
 /* Custom page CSS
 -------------------------------------------------- */
