--- a/PhotoBook/Views/Shared/_Navbar.cshtml
+++ b/PhotoBook/Views/Shared/_Navbar.cshtml
@@ -10,8 +10,8 @@
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li>@Html.ActionLink("Photos", "Photos", "PhotoBook", new { id = (int)@Membership.GetUser().ProviderUserKey}, null)</li>
-                <li>@Html.ActionLink("Upload", "Upload", "PhotoBook")</li>
+              <li>@Html.ActionLink("Photos", "Photos", "PhotoBook", /*new { id = (int)@Membership.GetUser().ProviderUserKey}*/null, null)</li>
+                <li>@Html.ActionLink("Upload", "Upload", "Photo")</li>
             </ul>
             @*@Html.Partial("~/Views/Shared/_SearchBar.cshtml")*@
               @*<ul class="nav navbar-nav">
@@ -21,8 +21,10 @@
               @if (Request.IsAuthenticated)
               {
                   <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: null )</li>
-                    <li>@Html.ActionLink("Log off", "LogOff", "Account")
+                    <li>@*@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: null )*@
+                        <a href="@Url.Action("Manage", "Account")"><span class="glyphicon glyphicon-pencil" style="font-size:12pt;" /> @User.Identity.Name</a>
+                    </li>
+                    <li><a href="@Url.Action("LogOff", "Account")"><span class="glyphicon glyphicon-log-out" style="font-size:12pt;"/> Log Off</a>
                         @*@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
                             @Html.AntiForgeryToken()
                             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
@@ -31,8 +33,12 @@
                 </ul>
               } else {
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-                    <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+                    <li>@*@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })*@
+                        <a href="@Url.Action("Register", "Account")"><span class="glyphicon glyphicon-check" style="font-size:12pt;"/> Register</a>
+                    </li>
+                    <li>@*@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })*@
+                        <a href="@Url.Action("Login", "Account")"><span class="glyphicon glyphicon-log-in" style="font-size:12pt;"/> Log in</a>
+                    </li>
                 </ul>
             }
           </div><!--/.nav-collapse -->
