a simple tag cloud added

--- a/PhotoBook/Views/Home/Index.cshtml
+++ b/PhotoBook/Views/Home/Index.cshtml
@@ -27,3 +27,14 @@
         <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
     </li>
 </ol>
+
+<div id="tags">
+    @foreach (var t in (IEnumerable<PhotoBook.Models.Tag>) ViewData["TagCloud"] )
+    {
+        int count = 0;
+        if (t.Photos == null) { count = 1; }
+        @Html.ActionLink(t.Name, "Index", "Tag", new { id = t.ID }, new { @class = PhotoBook.Services.TagService.GetTagClass(count,t.ID)})
+        @:&nbsp;
+    }
+</div>
+
