--- a/PhotoBook/Views/Photo/Details.cshtml
+++ b/PhotoBook/Views/Photo/Details.cshtml
@@ -11,9 +11,9 @@
     </div>
 </div>
 <div>
-    @Html.ActionLink("Edit Photo", "Edit", "PhotoBook", new { id = Model.ID}, null)
+    @Html.ActionLink("Edit Photo", "Edit", "Photo", new { id = Model.ID}, null)
     <br />
-    @Html.ActionLink("Delete Photo", "Delete", "PhotoBook", new { id = Model.ID}, null)
+    @Html.ActionLink("Delete Photo", "Delete", "Photo", new { id = Model.ID}, null)
 </div>
 <div class="image-description">
     <h4>Description</h4>
