--- a/PhotoBook/Views/Tag/Index.cshtml
+++ b/PhotoBook/Views/Tag/Index.cshtml
@@ -2,11 +2,16 @@
 @using PagedList.Mvc
 
 @{
-    ViewBag.Title = "Photos with tag '" + ViewBag.Tag.Name + "'";
+    ViewBag.Title = "Photos tagged '" + ViewBag.Tag.Name + "'";
 }
 @{ PhotoBook.DAL.UnitOfWork unitOfWork = new PhotoBook.DAL.UnitOfWork(); }
 <div class="page-header center">
-  <h1>@ViewBag.Title&nbsp;<small>@Html.ActionLink("View slideshow", "Slideshow", "Photo", new { type = "tag", id = ViewBag.Tag.ID }, null)</small></h1>
+  <h1>@ViewBag.Title
+      @if (Model.Count > 0)
+      {
+          @:&nbsp;<small>@Html.ActionLink("View slideshow", "Slideshow", "Photo", new { type = "tag", id = ViewBag.Tag.ID }, null)</small>
+      }
+  </h1>
 </div>
 <div class="row">
 @{
