--- a/PhotoBook/Views/Photo/Details.cshtml
+++ b/PhotoBook/Views/Photo/Details.cshtml
@@ -25,9 +25,12 @@
         <p><i>None</i></p>
     }
 </div>
-<div>
-    @Html.ActionLink("Edit Photo", "Edit", "Photo", new { id = Model.ID }, new { @class="btn btn-default", role="button"})
-    @Html.ActionLink("Delete Photo", "Delete", "Photo", new { id = Model.ID }, new { @class="btn btn-default", role="button"})
-</div>
+    @if (Model.UserID == WebSecurity.CurrentUserId)
+    {
+        <div>
+            @Html.ActionLink("Edit Photo", "Edit", "Photo", new { id = Model.ID }, new { @class="btn btn-default", role="button"})
+            @Html.ActionLink("Delete Photo", "Delete", "Photo", new { id = Model.ID }, new { @class="btn btn-default", role="button"})
+        </div>
+    }
     </div>
 
