--- a/PhotoBook/Views/PhotoBook/Photos.cshtml
+++ b/PhotoBook/Views/PhotoBook/Photos.cshtml
@@ -8,7 +8,12 @@
 
 @{ PhotoBook.DAL.UnitOfWork unitOfWork = new PhotoBook.DAL.UnitOfWork(); }
 <div class="page-header center">
-  <h1>@ViewBag.Title&nbsp;<small>@Html.ActionLink("View slideshow", "Slideshow", "Photo", new { id = ViewBag.UserID }, null)</small></h1>
+  <h1>@ViewBag.Title
+      @if (Model.Count > 0)
+      {
+        @:&nbsp;<small>@Html.ActionLink("View slideshow", "Slideshow", "Photo", new { type = "user", id = ViewBag.UserID }, null)</small>
+      }
+  </h1>
 </div>
 
 <div class="row">
