photo effects; template added

--- a/PhotoBook/Content/gallery.css
+++ b/PhotoBook/Content/gallery.css
@@ -1,4 +1,4 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Josefin+Sans+Std+Light);
+﻿@import url(http://fonts.googleapis.com/css?family=Forum);
 html,body{height:100%;}
 *{outline:none;}
 body{margin:0px; padding:0px; background:#000;}
