--- a/PhotoBook/Views/Account/Login.cshtml
+++ b/PhotoBook/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
             <input type="checkbox"> Remember Me
         </label>
     </div>
-    <input type="submit" value="Log in" class="btn btn-default" />
+    <input type="submit" value="Log in" class="btn btn-primary" />
     <p>
         <br />@Html.ActionLink("Register", "Register") if you don't have an account.
     </p>
