--- a/PhotoBook/Views/Account/Register.cshtml
+++ b/PhotoBook/Views/Account/Register.cshtml
@@ -28,7 +28,7 @@
         @Html.LabelFor(m => m.Email)
         @Html.TextBoxFor(m => m.Email, new { @class = "form-control"}) 
     </div>
-    <input type="submit" value="Register" class="btn btn-default" /> 
+    <input type="submit" value="Register" class="btn btn-primary" /> 
 }
 
 @section Scripts {
