--- a/PhotoBook/Views/Account/_ChangePasswordPartial.cshtml
+++ b/PhotoBook/Views/Account/_ChangePasswordPartial.cshtml
@@ -21,5 +21,5 @@
         @Html.LabelFor(m => m.ConfirmPassword)
         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control"})
     </div>
-    <input type="submit" value="Change password" class="btn btn-default" />
+    <input type="submit" value="Change password" class="btn btn-primary" />
 }
