--- a/PhotoBook/Views/Photo/Upload.cshtml
+++ b/PhotoBook/Views/Photo/Upload.cshtml
@@ -32,7 +32,7 @@
         @Html.TextBoxFor(m => m.Tags, new { @class = "form-control"})
     </div>
 
-    <input type="submit" value="Upload" class="btn btn-default" /> 
+    <input type="submit" value="Upload" class="btn btn-primary" /> 
 }
 
 <script>
