--- a/PhotoBook/Content/styles.css
+++ b/PhotoBook/Content/styles.css
@@ -5,7 +5,6 @@ html,
 body {
   height: 100%;
     background: url("bg.png");
-    font-family: "segoeui";
 }
 
 /* Wrapper for page content to push down footer */
@@ -14,15 +13,31 @@ body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin: 0 auto -70px;
   /* Pad bottom by footer height */
-  padding: 0 0 60px;
+  padding: 0 0 70px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
   height: 60px;
-  background-color: #f5f5f5;
+  margin-top: 10px;
+}
+
+.footer-default {
+  background-color: #dd4814;
+  border-bottom-color: #bf3e11;
+  border-left-color: #bf3e11;
+  border-right-color: #bf3e11;
+  border-top-color: #bf3e11
+}
+
+.footer-inverse {
+  background-color: #772953;
+  border-bottom-color: #511c39;
+  border-left-color: #511c39;
+  border-right-color: #511c39;
+  border-top-color: #511c39;
 }
 
 .center {
