--- a/PhotoBook/Views/Photo/Edit.cshtml
+++ b/PhotoBook/Views/Photo/Edit.cshtml
@@ -15,7 +15,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-6" style="margin-top: 15px;">
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     @Html.AntiForgeryToken()
@@ -35,8 +35,14 @@
         @Html.ValidationMessageFor(model => model.Tags)
     </div>
     
-    <fieldset>
-        <legend>Filters</legend>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Effect)
+        <div class="radio">
+          <label>
+                @Html.RadioButtonFor(model => Model.Effect, Effect.None)
+            None
+          </label>
+        </div>
         <div class="radio">
           <label>
                 @Html.RadioButtonFor(model => Model.Effect, Effect.Autocontrast)
@@ -45,8 +51,8 @@
         </div>
         <div class="radio">
           <label>
-            @Html.RadioButtonFor(model => Model.Effect, Effect.Monochrome)
-            Monochrome
+            @Html.RadioButtonFor(model => Model.Effect, Effect.Grayscale)
+            Grayscale
           </label>
         </div>
         <div class="radio">
@@ -55,27 +61,9 @@
             Sepia
           </label>
         </div>
-        @*<div class="radio">
-          <label>
-            <input type="radio" name="effect" id="Autocontrast" value="Autocontrast">
-            Autocontrast
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="effect" id="Monochrome" value="Monochrome">
-            Monochrome
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="effect" id="Sepia" value="Sepia">
-            Sepia
-          </label>
-        </div>*@
-    </fieldset>
+    </div>
 
-    <input type="submit" value="Save" class="btn btn-default" />
+    <input type="submit" value="Save" class="btn btn-primary" />
 }
 </div>
 
