--- a/PhotoBook/Views/Shared/_Layout.cshtml
+++ b/PhotoBook/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/styles.css")
     @Styles.Render("~/Content/bootstrap/bootstrap.min.css")
-    @Styles.Render("~/Content/bootstrap/bootstrap-theme.min.css")
+    @*@Styles.Render("~/Content/bootstrap/bootstrap-theme.min.css")*@
     @Scripts.Render("~/Scripts/jquery-1.9.1.min.js")
     @Scripts.Render("~/Scripts/bootstrap.min.js")
     @RenderSection("scripts", required: false)
@@ -32,23 +32,10 @@
     <div id="wrap">
         @Html.Partial("~/Views/Shared/_Navbar.cshtml")
         <div class="container">
-                
-            @if(IsSectionDefined("Sidebar"))
-            {
-                <div id="body" class="col-md-9">
-                    @RenderBody()
-                </div>
-                <div class="col-md-3 " id="sidebars">
-                    @RenderSection("Sidebar")
-                </div>
-            }
-            else
-            {
-                @RenderBody()
-            }
+            @RenderBody()
         </div>
     </div>
-    <div id="footer">
+    <div id="footer" class="footer-inverse">
       <div class="container">
         <p class="text-muted credit">@DateTime.Now.Year, &copy PhotoBook</p>
       </div>
