--- a/PhotoBook/Views/Shared/_Navbar.cshtml
+++ b/PhotoBook/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-default navbar-fixed-top">
+﻿<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,7 +6,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("PhotoBook", "Index", "Home", null, new { @class = "navbar-brand"})
+            @Html.ActionLink("PhotoBook", "Index", "PhotoBook", null, new { @class = "navbar-brand"})
           </div>
           <div class="collapse navbar-collapse">
               @if (Request.IsAuthenticated)
@@ -21,23 +21,28 @@
                  <li>@Html.ActionLink("Регистрация", "Register", "Account")</li>
             </ul>*@
                   <ul class="nav navbar-nav navbar-right">
-                    <li>@*@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: null )*@
-                        <a href="@Url.Action("Manage", "Account")"><span class="glyphicon glyphicon-pencil" style="font-size:12pt;" /> @User.Identity.Name</a>
+                    <li>
+                        <a href="@Url.Action("Manage", "Account")">
+                            @User.Identity.Name&nbsp;<span class="glyphicon glyphicon-pencil" style="font-size:12pt;" />
+                        </a>
                     </li>
-                    <li><a href="@Url.Action("LogOff", "Account")"><span class="glyphicon glyphicon-log-out" style="font-size:12pt;"/> Log Off</a>
-                        @*@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
-                            @Html.AntiForgeryToken()
-                            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-                        }*@
+                    <li>
+                        <a href="@Url.Action("LogOff", "Account")">
+                            Log off&nbsp;<span class="glyphicon glyphicon-log-out" style="font-size:12pt;"/>
+                        </a>
                     </li>
                 </ul>
               } else {
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@*@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })*@
-                        <a href="@Url.Action("Register", "Account")"><span class="glyphicon glyphicon-check" style="font-size:12pt;"/> Register</a>
+                    <li>
+                        <a href="@Url.Action("Register", "Account")">
+                            Register&nbsp;<span class="glyphicon glyphicon-check" style="font-size:12pt;"/>
+                        </a>
                     </li>
-                    <li>@*@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })*@
-                        <a href="@Url.Action("Login", "Account")"><span class="glyphicon glyphicon-log-in" style="font-size:12pt;"/> Log in</a>
+                    <li>
+                        <a href="@Url.Action("Login", "Account")">
+                            Log in&nbsp;<span class="glyphicon glyphicon-log-in" style="font-size:12pt;"/>
+                        </a>
                     </li>
                 </ul>
             }
