--- a/PhotoBook/Views/Photo/Upload.cshtml
+++ b/PhotoBook/Views/Photo/Upload.cshtml
@@ -83,3 +83,45 @@
           });
     });
   </script>
+
+@*<script type="text/coffeescript">
+    $ ->
+  split = (val) ->
+    val.split /,\s*/
+  extractLast = (term) ->
+    split(term).pop()
+  
+  # don't navigate away from the field on tab when selecting an item
+  $("#Tags").bind("keydown", (event) ->
+    event.preventDefault()  if event.keyCode is $.ui.keyCode.TAB and $(this).data("ui-autocomplete").menu.active
+  ).autocomplete
+    source: (request, response) ->
+      $.getJSON "/Tag/GetTags",
+        term: extractLast(request.term)
+      , response
+
+    search: ->
+      
+      # custom minLength
+      term = extractLast(@value)
+      false  if term.length < 2
+
+    focus: ->
+      
+      # prevent value inserted on focus
+      false
+
+    select: (event, ui) ->
+      terms = split(@value)
+      
+      # remove the current input
+      terms.pop()
+      
+      # add the selected item
+      terms.push ui.item.value
+      
+      # add placeholder to get the comma-and-space at the end
+      terms.push ""
+      @value = terms.join(", ")
+      false
+</script>*@
