--- a/PhotoBook/Views/Photo/Details.cshtml
+++ b/PhotoBook/Views/Photo/Details.cshtml
@@ -4,12 +4,14 @@
     ViewBag.Title = "Details";
 }
 
-<div style="margin: 0 auto; width:50%;">
+<div class="col-md-6">
 <div class="image-detail">
     <div class="image-single">
         <img src="@Url.Content(String.Concat("~/_uploads/", Model.Filename))" alt="photo" class="centered" />
     </div>
 </div>
+</div>
+<div class="col-md-6" style="margin-top: 10px;">
 <div class="image-description">
     <h4>Description</h4>
     <p>@Html.DisplayFor(x => x.Description)</p>
