--- a/PhotoBook/Views/Account/Register.cshtml
+++ b/PhotoBook/Views/Account/Register.cshtml
@@ -18,15 +18,18 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password)
-        @Html.PasswordFor(m => m.Password, new { @class = "form-control"}) 
+        @Html.PasswordFor(m => m.Password, new { @class = "form-control"})
+        @Html.ValidationMessageFor(m => m.Password)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword)
         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control"}) 
+        @Html.ValidationMessageFor(m => m.ConfirmPassword)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control"}) 
+        @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
+        @Html.ValidationMessageFor(m => m.Email)
     </div>
     <input type="submit" value="Register" class="btn btn-primary" /> 
 }
