--- a/PhotoBook/Views/Shared/Error.cshtml
+++ b/PhotoBook/Views/Shared/Error.cshtml
@@ -8,3 +8,20 @@
     <h1 class="error">Error.</h1>
     <h2 class="error">An error occurred while processing your request.</h2>
 </hgroup>
+
+@if (Model != null && HttpContext.Current.IsDebuggingEnabled)
+    {
+        <div>
+            <p>
+                <b>Exception:</b> @Model.Exception.Message<br />
+                <b>Controller:</b> @Model.ControllerName<br />
+                <b>Action:</b> @Model.ActionName
+            </p>
+            <div style="overflow:scroll">
+                <pre>
+@Model.Exception.StackTrace
+                </pre>
+            </div>
+        </div>
+    }
+</div>
