new partial view; raw sql query

--- a/PhotoBook/Views/Account/ConfirmationFailure.cshtml
+++ b/PhotoBook/Views/Account/ConfirmationFailure.cshtml
@@ -2,5 +2,5 @@
     ViewBag.Title = "Registration Error";
 }
 
-<h2>Registration Error</h2>
-<p>There was an error confirming your email. Please try again.</p>
+<h1>Registration Error</h1>
+<h2>There was an error confirming your email. Please try again.</h2>
