--- a/PhotoBook/Views/Account/RegisterStepTwo.cshtml
+++ b/PhotoBook/Views/Account/RegisterStepTwo.cshtml
@@ -2,5 +2,5 @@
     ViewBag.Title = "RegisterStepTwo";
 }
 
-<h2>Registration Instructions</h2>
-<p>To complete the registration process look for an email in your inbox that provides further instructions.</p>
+<h1>Registration Instructions</h1>
+<h2>To complete the registration process look for an email in your inbox that provides further instructions.</h2>
