--- a/PhotoBook/Views/Shared/Error.cshtml
+++ b/PhotoBook/Views/Shared/Error.cshtml
@@ -17,11 +17,10 @@
                 <b>Controller:</b> @Model.ControllerName<br />
                 <b>Action:</b> @Model.ActionName
             </p>
-            <div style="overflow:scroll">
+            <div>
                 <pre>
-@Model.Exception.StackTrace
+                    Model.Exception.StackTrace
                 </pre>
             </div>
         </div>
     }
-</div>
