--- a/PhotoBook/Views/Account/ConfirmationSuccess.cshtml
+++ b/PhotoBook/Views/Account/ConfirmationSuccess.cshtml
@@ -2,5 +2,5 @@
     ViewBag.Title = "Registration Completed";
 }
 
-<h2>Registration Completed</h2>
-<p>You have completed the registration process. You can now logon to the system by clicking on the logon link.</p>
+<h1>Registration Completed</h1>
+<h2>You have completed the registration process. You can now logon to the system by clicking on the logon link.</h2>
