some files modified

--- a/PhotoBook/Views/Shared/_Layout.cshtml
+++ b/PhotoBook/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div id="footer" class="footer-inverse">
       <div class="container">
-        <p class="text-muted credit">@DateTime.Now.Year, &copy PhotoBook</p>
+        <p class="text-muted credit">@DateTime.Now.Year, &copy; PhotoBook</p>
       </div>
     </div>
 </body>
