--- a/PhotoBook/Views/Shared/_TagCloud.cshtml
+++ b/PhotoBook/Views/Shared/_TagCloud.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<PhotoBook.Entities.Tag>
 
-    <h3 class="center">Tag cloud</h3>
-    @foreach (var t in Model )
+<div class="page-header center">
+    <h1>Tags</h1>
+</div>
+@foreach (var t in Model )
+{
+    int count = 1;
+    if (t.Photos != null) 
     {
-        int count = 1;
-        if (t.Photos != null) 
-        {
-            count = t.Photos.Count;
-        }
-        @Html.ActionLink(t.Name, "Index", "Tag", new { id = t.ID }, new { @class = PhotoBook.Services.TagService.GetTagClass(count, ViewBag.TotalPhotosCount)})
-        @:&nbsp;
+        count = t.Photos.Count;
     }
+    @Html.ActionLink(t.Name, "Index", "Tag", new { id = t.ID }, new { @class = PhotoBook.Services.TagService.GetTagClass(count, ViewBag.TotalPhotosCount)})
+    @:&nbsp;
+}
