--- a/PhotoBook/Views/PhotoBook/Photos.cshtml
+++ b/PhotoBook/Views/PhotoBook/Photos.cshtml
@@ -8,12 +8,19 @@
   <h1>@ViewBag.Title
       @if (Model.Count > 0)
       {
-        @:&nbsp;<small>@Html.ActionLink("View as a slideshow", "Slideshow", "Photo", new { type = "popular"}, null)</small>
+        @:&nbsp;<small>@Html.ActionLink("View as a slideshow", "Slideshow", "Photo", new { type = "user", id = ViewBag.UserID}, null)</small>
       }
   </h1>
 </div>
 
-@{ Html.RenderPartial("~/Views/Shared/_PhotoList.cshtml", Model); }
+@if (Model.Count > 0)
+{
+    Html.RenderPartial("~/Views/Shared/_PhotoList.cshtml", Model);
+}
+else
+{
+    <h3 class="center">No photos found.</h3>
+}
 @Html.PagedListPager(Model
                     , page => Url.Action("Photos"
                     , new RouteValueDictionary {{"id", ViewBag.UserID}, {"page", page }})
